# optimization_methods_lab_01

./: CMakeLists.txt
include/: simplex_method.hpp
sources/: main.cpp  simplex_method.cpp
